Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-    Hello World!
+    <header>Header content</header>
+    <section>Main Image
+    </section>
+    <section>Club Ethos
+    </section>
+    <section>running locations, distances and times
+    </section>
+    <footer>Social links here</footer>
 </body>
 
 </html>
