--- a/index.html
+++ b/index.html
@@ -12,14 +12,36 @@
 </head>
 
 <body>
-    <header>Header content</header>
-    <section>Main Image
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        Main Image
     </section>
-    <section>Club Ethos
+    <section>
+        Club Ethos
     </section>
-    <section>running locations, distances and times
+    <section>
+        running locations, distances and times
     </section>
-    <footer>Social links here</footer>
+    <footer>
+        Social links here
+    </footer>
 </body>
 
 </html>
