--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
-                <a href="https://wwww.facebook.com" target="_blank" rel="noopener"
+                <a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://wwww.twitter.com" target="_blank" rel="noopener"
+                <a href="https://www.twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://wwww.youtube.com" target="_blank" rel="noopener"
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://wwww.instagram.com" target="_blank" rel="noopener"
+                <a href="https://www.instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
